--- a/frontend/game.css
+++ b/frontend/game.css
@@ -33,6 +33,19 @@ table.myTurn {
     background-color: white;
     cursor: initial;
 }
+#no {
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-size:60px;
+    cursor: pointer;
+}
+#no.clicked {
+    color: black;
+    background-color: white;
+    cursor: initial;
+}
 .button {
     /* border: 1px solid black; */
     height: 40px;
@@ -100,7 +113,8 @@ table.myTurn {
     border-width: 3px;
 }
 .clickable.last.black {
-    background-color: #363636;
+    border: 13px solid black;
+    background-color: white;
 }
 
 @keyframes flash {
